--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 	<div id="carouselExample" class="carousel slide">
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="../assets/img/escuela.png" class="d-block w-100 imgCarousel" alt="...">
+				<img src="assets/img/escuela.png" class="d-block w-100 imgCarousel" alt="...">
 			</div>
 			<div class="carousel-item">
-				<img src="../assets/img/escuela1.webp" class="d-block w-100 imgCarousel" alt="...">
+				<img src="assets/img/escuela1.webp" class="d-block w-100 imgCarousel" alt="...">
 			</div>
 			<div class="carousel-item">
-				<img src="../assets/img/delia provinciale1.jpg" class="d-block w-100 imgCarousel" alt="...">
+				<img src="assets/img/delia provinciale1.jpg" class="d-block w-100 imgCarousel" alt="...">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
