Correccion imagenes footer nuevo

--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -108,15 +108,15 @@
 		</h4>
 		<h4>Sitios de Interes</h4>
 		<a href="https://www.cba.gov.ar/organismo/ministerio-de-educacion" target="_blank"> <img
-				src="../assets/img/ministerio1.jpg" alt="logo-ministerio" width="50px"></a>
+				src="../assets/img/ministerio1.jpg" alt="logo-ministerio" ></a>
 		<a href="https://www.youtube.com/user/gobiernodecordoba" target="_blank"><img src="../assets/img/you tube.png"
-				alt="logo YouTube" width="50px"> </a>
+				alt="logo YouTube"> </a>
 		<a href="https://www.facebook.com/gobdecordoba" target="_blank"><img src="../assets/img/facebook-logo.png"
-				alt="escuelasede" width="50px"></a>
+				alt="escuelasede" ></a>
 		<a href="https://www.instagram.com/cordobaok/" target="_blank"><img src="../assets/img/instagram-logo-5.png"
-				alt="escuelasede" width="50px"></a>
+				alt="escuelasede" ></a>
 		<a href="https://twitter.com/gobdecordoba" target="_blank"><img src="../assets/img/twitter.png"
-				alt="logo twitter" width="50px"></a>
+				alt="logo twitter" ></a>
 		<h5>Todos los derechos Reservados</h5>
 	</footer>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
