--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -86,11 +86,11 @@
 				Ubicación
 			</h3>
 			<figure class="col-xl-6 col-md-12 col-sm-12">
-				<img class="img-ubic" 
+				<img class="d-block w-100 img-ubic" 
 					src="../assets/img/escuela.jpg" alt="escuelasede">
 			</figure>
 			<figure class="col-xl-6 col-md-12 col-sm-12">
-				<iframe class="mapa-ubic"
+				<iframe class="d-block w-100 mapa-ubic"
 					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3404.535180587142!2d-64.19403188509784!3d-31.426930303906204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a288f9c317bd%3A0xb47d5b88d480266f!2sEscuela%20%22Presidente%20Roque%20S%C3%A1enz%20Pe%C3%B1a%22!5e0!3m2!1ses!2sar!4v1674423785915!5m2!1ses!2sar"
 					width="600" height="300" allowfullscreen="" loading="lazy"
 					referrerpolicy="no-referrer-when-downgrade"></iframe>
