--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 				Organigrama Ministerial
 			</h3>
 			<figure class="col-xl-6 col-md-12 col-sm-12 text-center">
-				<img src="assets/img/organigramaA.png" alt="Un gato">
+				<img class="d-block w-100 org-a" src="assets/img/organigramaA.png" alt="Un gato">
 			</figure>
 			<figure class="col-xl-6 col-md-12 col-sm-12 text-center">
-				<img src="assets/img/organigramaB.png" alt="Un gato">
+				<img class="d-block w-100 org-b" src="assets/img/organigramaB.png" alt="Un gato">
 			</figure>
 		</div>
 	</section>
