--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<link rel="shortcut icon" href="assets/img/1141.png">
 	<title>Inspección</title>
 	<!-- CSS BOOTSTRAP -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 	<!-- MI CSS -->
 	<link rel="stylesheet" href="CSS/estilo.css">
 </head>
@@ -35,27 +36,27 @@
 	<!-- cierre de fila logo + nav -->
 	<!-- fila de información de mi sitio -->
 	<section class="index1">
-	<div id="carouselExample" class="carousel slide">
-		<div class="carousel-inner">
-			<div class="carousel-item active">
-				<img src="assets/img/escuela.png" class="d-block w-100 imgCarousel" alt="...">
+		<div id="carouselExample" class="carousel slide">
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img src="assets/img/escuela.png" class="d-block w-100 imgCarousel" alt="...">
+				</div>
+				<div class="carousel-item">
+					<img src="assets/img/escuela1.webp" class="d-block w-100 imgCarousel" alt="...">
+				</div>
+				<div class="carousel-item">
+					<img src="assets/img/delia provinciale1.jpg" class="d-block w-100 imgCarousel" alt="...">
+				</div>
 			</div>
-			<div class="carousel-item">
-				<img src="assets/img/escuela1.webp" class="d-block w-100 imgCarousel" alt="...">
-			</div>
-			<div class="carousel-item">
-				<img src="assets/img/delia provinciale1.jpg" class="d-block w-100 imgCarousel" alt="...">
-			</div>
+			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
+			</button>
+			<button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+			</button>
 		</div>
-		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			<span class="visually-hidden">Previous</span>
-		</button>
-		<button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-			<span class="carousel-control-next-icon" aria-hidden="true"></span>
-			<span class="visually-hidden">Next</span>
-		</button>
-	</div>	
 	</section>
 	<section class="index2">
 		<div class="row">
@@ -70,52 +71,41 @@
 			</figure>
 		</div>
 	</section>
-
-
-	<h3>Personal Administrativo</h3>
-	<article class="terceraSeccionIndexC">
-		<div>
-			<figure>
+	<section class="index3">
+		<div class="row">
+			<h3 class="text-center border border-info-subtle">
+				Personal Administativo Zona 1141
+			</h3>
+			<figure class="col-xl-2 col-md-4 col-sm-4 text-center">
 				<img src="assets/img/Secretario 1141.jpg" alt="img secretario 1141">
 				<figcaption>Secretario Técnico</figcaption>
 			</figure>
-		</div>
-		<div>
-			<figure>
-				<img src="assets/img/img.png" alt="img Inspectora zonal"> </p>
-				<figcaption>Secretaria Administrativa</figcaption>
-			</figure>
-		</div>
-		<div>
-			<figure>
-				<img src="assets/img/img.png" alt="img Secretaria Zonal"> </p>
-				<figcaption>Secretaria Administrativa</figcaption>
-			</figure>
-		</div>
-	</article>
-	<article class="terceraSeccionIndexD">
-		<div>
-			<figure>
-				<img src="assets/img/img.png" alt="img secretario 1141">
-				<figcaption>Secretaria Administrativa</figcaption>
-			</figure>
-		</div>
-		<div>
-			<figure>
-				<img src="assets/img/img.png" alt="img Inspectora zonal"> </p>
-				<figcaption>Secretaria Administrativa</figcaption>
-			</figure>
-		</div>
-		<div>
-			<figure>
-				<img src="assets/img/img.png" alt="img Secretaria Zonal"> </p>
-				<figcaption>Secretaria Administrativa</figcaption>
-			</figure>
-		</div>
-	</article>
-	<article>
 
-	</article>
+			<figure class="col-xl-2 col-md-4 col-sm-4 text-center">
+				<img src="assets/img/img.png" alt="img Secretaria"> 
+				<figcaption>Secretaria Administrativa</figcaption>
+			</figure>
+
+			<figure class="col-xl-2 col-md-4 col-sm-4 text-center">
+				<img src="assets/img/img.png" alt="img Secretaria"> 
+				<figcaption>Secretaria Administrativa</figcaption>
+			</figure>
+
+			<figure class="col-xl-2 col-md-4 col-sm-4 text-center">
+				<img src="assets/img/img.png" alt="img Secretaria">
+				<figcaption>Secretaria Administrativa</figcaption>
+			</figure>
+
+			<figure class="col-xl-2 col-md-4 col-sm-4 text-center">
+				<img src="assets/img/img.png" alt="img Secretaria"> 
+				<figcaption>Secretaria Administrativa</figcaption>
+			</figure>
+
+			<figure class="col-xl-2 col-md-4 col-sm-4 text-center">
+				<img src="assets/img/img.png" alt="img Secretaria">
+				<figcaption>Secretaria Administrativa</figcaption>
+			</figure>
+		</div>
 	</section>
 	<section>
 		<div class="cajaEscuelasCentro">
@@ -177,7 +167,9 @@
 		</h4>
 		<h5>Todos los derechos Reservados</h5>
 	</footer>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+		crossorigin="anonymous"></script>
 </body>
 
 </html>
