--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -83,7 +83,7 @@
 	<section>
 		<div class="row">
 			<h3 class="text-center border border-info-subtle">
-				Ubicación
+				Ubicación Escuela Sede de Inspeccion
 			</h3>
 			<figure class="col-xl-6 col-md-12 col-sm-12">
 				<img class="d-block w-100 img-ubic" 
