--- a/index.html
+++ b/index.html
@@ -12,29 +12,48 @@
 	<!-- MI CSS -->
 	<link rel="stylesheet" href="CSS/estilo.css">
 </head>
-
-<body>
+<body class="container-fluid">
 	<!-- fila de logo + nav -->
 	<header>
-		<h1>
-			<img src="assets/img/logo ministerio.png" alt="img logo ministerio">
-			Inspección Zona 1141
-			<img src="assets/img/zona 1141.png" alt="img logo zona">
-		</h1>
-
+		<nav class="navbar navbar-expand-lg">
+			<div class="container-fluid">
+				<div class="logo">
+					<img src="../assets/img/1141.png" alt="logo">
+				</div>
+				<h2>Inspeccion Zona 1141</h2>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+					data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+					aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNavDropdown">
+					<ul class="navbar-nav ms-auto ">
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="index.html">Home</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+								aria-expanded="false">
+								Escuelas
+							</a>
+							<ul class="dropdown-menu">
+								<li><a class="dropdown-item" href="/pages/escuelas-centro.html">Zona Centro</a></li>
+								<li><a class="dropdown-item" href="/pages/escuelas-sur.html">Zona Sur</a></li>
+								<li><a class="dropdown-item" href="/pages/escuelas-oeste.html">Zona Oeste</a></li>
+							</ul>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/pages/ubicacion.html">Ubicacion</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/pages/contacto.html">Contacto</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
 	</header>
-	<nav>
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="pages/escuelas-centro.html">Escuelas Zona Centro</a></li>
-			<li><a href="pages/escuelas-sur.html">Escuelas Zona Sur</a></li>
-			<li><a href="pages/escuelas-oeste.html">Escuelas Zona Oeste</a></li>
-			<li><a href="pages/ubicacion.html">Ubicacion</a></li>
-			<li><a href="pages/contacto.html">Contacto</a></li>
-		</ul>
-	</nav>
-	<!-- cierre de fila logo + nav -->
-	<!-- fila de información de mi sitio -->
+
 	<section class="index1">
 		<div id="carouselExample" class="carousel slide">
 			<div class="carousel-inner">
@@ -157,15 +176,36 @@
 
 	<!-- inicio de footer -->
 	<footer>
-		<h4>
-			<img src="assets/img/Logo-header-web.png" alt="img cordoba entre todos">
-			<img src="assets/img/zona 1141.png" alt="img logo zona">
-			<a href="https://www.youtube.com/user/gobiernodecordoba" target="_blank">YouTube</a>
-			<a href="https://www.facebook.com/gobdecordoba" target="_blank">Facebook</a>
-			<a href="https://www.instagram.com/cordobaok/" target="_blank">Instagram</a>
-			<a href="https://twitter.com/gobdecordoba" target="_blank">Twitter</a>
+		<img class="img-logofooter" src="../assets/img/1141.png" alt="img zona 1141">
+		<h4> Inspección Zona 1141 </h4>
+		<h4 class="logo-footer">
+			<ul>
+				<li> Dirección: Av. Velez Sarsfield 1002 B° Nueva Córdoba </li>
+				<li> Email: zona1141@gmail.com </li>
+				<li> Telefono: 4333599 </li>
+			</ul>
 		</h4>
-		<h5>Todos los derechos Reservados</h5>
+		<h4>Sitios de Interes</h4>
+		<a href="https://www.cba.gov.ar/organismo/ministerio-de-educacion" target="_blank"> <img
+				src="../assets/img/ministerio1.jpg" alt="logo-ministerio"></a>
+		<a href="https://www.youtube.com/user/gobiernodecordoba" target="_blank"><img src="../assets/img/you tube.png"
+				alt="logo YouTube"> </a>
+		<a href="https://www.facebook.com/gobdecordoba" target="_blank"><img src="../assets/img/facebook-logo.png"
+				alt="escuelasede"></a>
+		<a href="https://www.instagram.com/cordobaok/" target="_blank"><img src="../assets/img/instagram-logo-5.png"
+				alt="escuelasede"></a>
+		<a href="https://twitter.com/gobdecordoba" target="_blank"><img src="../assets/img/twitter.png"
+				alt="logo twitter"></a>
+		<div class="container">
+			<footer class="d-flex flex-wrap justify-content-between align-items-center py-1 my-2">
+				<p class="col-md-4 mb-0 text-muted">&copy; 2023 Company, Inc. All rights reserved</p>
+				<ul class="nav col-md-4 justify-content-end">
+					<li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
+					<li class="nav-item"><a href="/pages/ubicacion.html" class="nav-link px-2 text-muted">Ubicacion</a></li>
+					<li class="nav-item"><a href="/pages/contacto.html" class="nav-link px-2 text-muted">Contacto</a></li>
+				</ul>
+			</footer>
+		</div>
 	</footer>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
