--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<nav class="navbar navbar-expand-lg">
 			<div class="container-fluid">
 				<div class="logo">
-					<img src="/assets/img/1141.png" alt="logo">
+					<img src="assets/img/1141.png" alt="logo">
 				</div>
 				<h2>Inspeccion Zona 1141</h2>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -37,16 +37,16 @@
 								Escuelas
 							</a>
 							<ul class="dropdown-menu">
-								<li><a class="dropdown-item" href="/pages/escuelas-centro.html">Zona Centro</a></li>
-								<li><a class="dropdown-item" href="/pages/escuelas-sur.html">Zona Sur</a></li>
-								<li><a class="dropdown-item" href="/pages/escuelas-oeste.html">Zona Oeste</a></li>
+								<li><a class="dropdown-item" href="pages/escuelas-centro.html">Zona Centro</a></li>
+								<li><a class="dropdown-item" href="pages/escuelas-sur.html">Zona Sur</a></li>
+								<li><a class="dropdown-item" href="pages/escuelas-oeste.html">Zona Oeste</a></li>
 							</ul>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/pages/ubicacion.html">Ubicacion</a>
+							<a class="nav-link" href="pages/ubicacion.html">Ubicacion</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/pages/contacto.html">Contacto</a>
+							<a class="nav-link" href="pages/contacto.html">Contacto</a>
 						</li>
 					</ul>
 				</div>
@@ -176,7 +176,7 @@
 
 	<!-- inicio de footer -->
 	<footer>
-		<img class="img-logofooter" src="/assets/img/1141.png" alt="img zona 1141">
+		<img class="img-logofooter" src="assets/img/1141.png" alt="img zona 1141">
 		<h4> Inspección Zona 1141 </h4>
 		<h4 class="logo-footer">
 			<ul>
@@ -187,22 +187,22 @@
 		</h4>
 		<h4>Sitios de Interes</h4>
 		<a href="https://www.cba.gov.ar/organismo/ministerio-de-educacion" target="_blank"> <img
-				src="/assets/img/ministerio1.jpg" alt="logo-ministerio"></a>
-		<a href="https://www.youtube.com/user/gobiernodecordoba" target="_blank"><img src="/assets/img/you tube.png"
+				src="assets/img/ministerio1.jpg" alt="logo-ministerio"></a>
+		<a href="https://www.youtube.com/user/gobiernodecordoba" target="_blank"><img src="assets/img/you tube.png"
 				alt="logo YouTube"> </a>
-		<a href="https://www.facebook.com/gobdecordoba" target="_blank"><img src="/assets/img/facebook-logo.png"
+		<a href="https://www.facebook.com/gobdecordoba" target="_blank"><img src="assets/img/facebook-logo.png"
 				alt="escuelasede"></a>
-		<a href="https://www.instagram.com/cordobaok/" target="_blank"><img src="/assets/img/instagram-logo-5.png"
+		<a href="https://www.instagram.com/cordobaok/" target="_blank"><img src="assets/img/instagram-logo-5.png"
 				alt="escuelasede"></a>
-		<a href="https://twitter.com/gobdecordoba" target="_blank"><img src="/assets/img/twitter.png"
+		<a href="https://twitter.com/gobdecordoba" target="_blank"><img src="assets/img/twitter.png"
 				alt="logo twitter"></a>
 		<div class="container">
 			<footer class="d-flex flex-wrap justify-content-between align-items-center py-1 my-2">
 				<p class="col-md-4 mb-0 text-muted">&copy; 2023 Company, Inc. All rights reserved</p>
 				<ul class="nav col-md-4 justify-content-end">
 					<li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
-					<li class="nav-item"><a href="/pages/ubicacion.html" class="nav-link px-2 text-muted">Ubicacion</a></li>
-					<li class="nav-item"><a href="/pages/contacto.html" class="nav-link px-2 text-muted">Contacto</a></li>
+					<li class="nav-item"><a href="pages/ubicacion.html" class="nav-link px-2 text-muted">Ubicacion</a></li>
+					<li class="nav-item"><a href="pages/contacto.html" class="nav-link px-2 text-muted">Contacto</a></li>
 				</ul>
 			</footer>
 		</div>
