Correcciones contacto html

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -57,7 +57,7 @@
 				Escuela Sede de Inspección
 			</h3>
 			<figure class="col-xl-6 col-md-12 col-sm-12 text-center">
-				<img class="foto-contacto" src="../assets/img/escuela1.jpg" alt="img contacto">
+				<img class="d-block foto-contacto" src="../assets/img/escuela1.jpg" alt="img contacto">
 			</figure>
 	<!-- formulario de contacto -->
 			<figure class="col-xl-6 col-md-12 col-sm-12 text-center">
