--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
 	<!-- MI CSS -->
 	<link rel="stylesheet" href="../CSS/estilo.css">
 </head>
+
 <body class="container-fluid">
 	<!-- fila de logo + nav -->
 	<header>
@@ -56,28 +58,32 @@
 			<h3 class="text-center border border-info-subtle">
 				Escuela Sede de Inspección
 			</h3>
-			<figure class="col-xl-6 col-md-12 col-sm-12 text-center">
-				<img class="d-block foto-contacto" src="../assets/img/escuela1.jpg" alt="img contacto">
+			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<img class="d-inline foto-contacto" src="../assets/img/escuela2.jpg" alt="img contacto">
 			</figure>
-	<!-- formulario de contacto -->
-			<figure class="col-xl-6 col-md-12 col-sm-12 text-center">
+			<!-- formulario de contacto -->
+			<div class="col-xl-6 col-md-6 col-sm-12 text-center">
 			<h4>Formulario de Contacto</h4>
 			<form action="#">
-				<input type="text" placeholder="Ingrese Nombre y Apellido"><br>
+				<label for="">Dejanos Nombre y Apellido</label>
+				<input type="text" placeholder="Nombre y Apellido">
+				<br><br>
 				<label for="email">Dejanos tu email:
-					<input type="email" placeholder="aaa@gmail.com" name="email"><br>
+					<input type="email" placeholder="aaa@gmail.com" name="email">
 				</label>
+				<br><br>
 				<label for="Deja tu Mensaje"> Deja tu Mensaje:<br>
 					<textarea placeholder="Ingrese su Mensaje"></textarea>
-				</label> <br>
+				</label> 
+				<br>
 				<input type="submit" value="ENVIAR">
 				<input type="reset" value="RESETEAR">
 			</form>
-			</figure>
+		</div>
 		</div>
 	</section>
 	<!-- cierre de form contacto -->
-	<!-- inicio de footer --> 
+	<!-- inicio de footer -->
 	<footer>
 		<img class="img-logofooter" src="../assets/img/1141.png" alt="img zona 1141">
 		<h4> Inspección Zona 1141 </h4>
@@ -114,4 +120,5 @@
 		integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
 		crossorigin="anonymous"></script>
 </body>
+
 </html>
