Cambios escuela saldias centro

--- a/pages/escuelas-centro.html
+++ b/pages/escuelas-centro.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +11,7 @@
 		integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 	<link rel="stylesheet" href="../CSS/estilo.css">
 </head>
+
 <body class="container-fluid">
 	<!-- fila de logo + nav -->
 	<header>
@@ -51,55 +53,61 @@
 			</div>
 		</nav>
 	</header>
-<section>
-	<article>
-		<h3>Escuela Adolfo Saldias</h3>
-		<div class="escuela11">
-			<div class="fotoEscuela11"> 
-			<img src="../assets/img/escuela-saldias.jpg" alt="img escuela-saldias">
+	<section>
+		<article>
+			<div class="row">
+				<h3 class="text-center border border-info-subtle">
+					Escuela Adolfo Saldias
+				</h3>
+				<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
+					<img class="d-block w-100 escuela-saldias" src="../assets/img/escuela-saldias.jpg" alt="img escuela-saldias">
+				</figure>
+				<div class="col-xl-6 col-md-6 col-sm-12 text-center">
+					<p class="textoFotoEscuela11"> 
+					Codigo de Inspección: 1141-11 Telefono: 0351 4334223
+					Directora: Palermo, Maria Estela Año de Fundación: 1941
+					</p>
+					<p>
+					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est. Temporibus dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium? Reiciendis, odio adipisci quasi quia perferendis minus non consequatur magni possimus eum autem expedita inciduntillum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
+					</p>
+				</div>
+				<h3>Ubicación</h3>
+				<h4>
+					<p>Dirección: Simón Bolivar 896 Barrio Güemes</p>
+				</h4>
+				<a href="https://goo.gl/maps/GzZh55zT5sFjvRym9" target="_blank">Ver en GOOGLE MAPS</a>
+		</article>
+	</section>
+	<section>
+		<article>
+			<h3>Escuela Estados Unidos</h3>
+			<div class="escuela13">
+				<div class="fotoEscuela13">
+					<img src="../assets/img/Escuela-Prov_EEUU.png" alt="img escuela-Estados Unidos">
+				</div>
+				<div class="textoFotoEscuela13">
+					<p> Codigo de Inspección: 1141-13 Telefono: 0351 4337992
+						Directora: Perez, Karina Lourdes Año de Fundación: 1929
+					</p>
+					<p> Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est.
+						Temporibus dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium?
+						Reiciendis, odio adipisci quasi quia perferendis minus non consequatur magni possimus eum autem
+						expedita incidunt illum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
+					</p>
+
+				</div>
 			</div>
-			<div class="textoFotoEscuela11">
-			<p> Codigo de Inspección: 1141-11 Telefono: 0351 4334223
-				Directora: Palermo, Maria Estela Año de Fundación: 1941 
-			</p>
-			<p> Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est. Temporibus dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium? Reiciendis, odio adipisci quasi quia perferendis minus non consequatur magni possimus eum autem expedita incidunt illum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta! 
-			</p>
-			</div>
-		</div>
-		<h3>Ubicación</h3>
-		<h4>
-			<p>Dirección: Simón Bolivar 896 Barrio Güemes</p>
-		</h4>
-		<a href="https://goo.gl/maps/GzZh55zT5sFjvRym9" target="_blank">Ver en GOOGLE MAPS</a>	
-	</article>
-</section>
-<section>
-	<article>
-		<h3>Escuela Estados Unidos</h3>
-		<div class="escuela13">
-			<div class="fotoEscuela13"> 
-			<img src="../assets/img/Escuela-Prov_EEUU.png" alt="img escuela-Estados Unidos">
-			</div>
-			<div class="textoFotoEscuela13">
-			<p> Codigo de Inspección: 1141-13 Telefono: 0351 4337992
-				Directora: Perez, Karina Lourdes Año de Fundación: 1929
-			</p>
-			<p> Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est. Temporibus dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium? Reiciendis, odio adipisci quasi quia perferendis minus non consequatur magni possimus eum autem expedita incidunt illum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta! 
-			</p>
-			
-			</div>
-		</div>
-		<h3>Ubicación</h3>
-		<h4>
-			<p>Dirección: La Pampa 550 Barrio Güemes</p>
-		</h4>
-		<a href="https://goo.gl/maps/2HxeNUQhpTdnSbxG8" target="_blank">Ver en GOOGLE MAPS</a>	
-	</article>
-</section>
-<h3 class="divisor"></h3> 
+			<h3>Ubicación</h3>
+			<h4>
+				<p>Dirección: La Pampa 550 Barrio Güemes</p>
+			</h4>
+			<a href="https://goo.gl/maps/2HxeNUQhpTdnSbxG8" target="_blank">Ver en GOOGLE MAPS</a>
+		</article>
+	</section>
+	<h3 class="divisor"></h3>
 
 
-	<!-- inicio de footer --> 
+	<!-- inicio de footer -->
 	<footer>
 		<img class="img-logofooter" src="../assets/img/1141.png" alt="img zona 1141">
 		<h4> Inspección Zona 1141 </h4>
@@ -133,8 +141,9 @@
 		</div>
 	</footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+		crossorigin="anonymous"></script>
 </body>
+
 </html>
