mejoras escuelas centro

--- a/pages/escuelas-centro.html
+++ b/pages/escuelas-centro.html
@@ -54,7 +54,6 @@
 		</nav>
 	</header>
 	<section>
-		<article>
 			<div class="row">
 				<h3 class="text-center border border-info-subtle">
 					Escuela Adolfo Saldias
@@ -75,8 +74,7 @@
 				<h4>
 					<p>Dirección: Simón Bolivar 896 Barrio Güemes</p>
 				</h4>
-				<a href="https://goo.gl/maps/GzZh55zT5sFjvRym9" target="_blank">Ver en GOOGLE MAPS</a>
-		</article>
+				<a class="d-block text-center" href="https://goo.gl/maps/GzZh55zT5sFjvRym9" target="_blank">Ver en GOOGLE MAPS</a>
 	</section>
 	<section>
 		<article>
