nueva correcion escuelas centro

--- a/pages/escuelas-centro.html
+++ b/pages/escuelas-centro.html
@@ -54,27 +54,32 @@
 		</nav>
 	</header>
 	<section>
-			<div class="row">
-				<h3 class="text-center border border-info-subtle">
-					Escuela Adolfo Saldias
-				</h3>
-				<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
-					<img class="d-block w-100 escuela-saldias" src="../assets/img/escuela-saldias.jpg" alt="img escuela-saldias">
-				</figure>
-				<div class="col-xl-6 col-md-6 col-sm-12 text-center">
-					<p class="textoFotoEscuela11"> 
+		<div class="row">
+			<h3 class="text-center border border-info-subtle">
+				Escuela Adolfo Saldias
+			</h3>
+			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<img class="d-block w-100 escuela-saldias" src="../assets/img/escuela-saldias.jpg"
+					alt="img escuela-saldias">
+			</figure>
+			<div class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<p class="textoFotoEscuela11">
 					Codigo de Inspección: 1141-11 Telefono: 0351 4334223
 					Directora: Palermo, Maria Estela Año de Fundación: 1941
-					</p>
-					<p>
-					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est. Temporibus dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium? Reiciendis, odio adipisci quasi quia perferendis minus non consequatur magni possimus eum autem expedita inciduntillum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
-					</p>
-				</div>
-				<h3>Ubicación</h3>
-				<h4>
-					<p>Dirección: Simón Bolivar 896 Barrio Güemes</p>
-				</h4>
-				<a class="d-block text-center" href="https://goo.gl/maps/GzZh55zT5sFjvRym9" target="_blank">Ver en GOOGLE MAPS</a>
+				</p>
+				<p>
+					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est. Temporibus
+					dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium? Reiciendis, odio
+					adipisci quasi quia perferendis minus non consequatur magni possimus eum autem expedita
+					inciduntillum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
+				</p>
+			</div>
+		</div>
+		<h3>Ubicación</h3>
+		<h4>
+			<p>Dirección: Simón Bolivar 896 Barrio Güemes</p>
+		</h4>
+		<a href="https://goo.gl/maps/GzZh55zT5sFjvRym9" target="_blank">Ver en GOOGLE MAPS</a>
 	</section>
 	<section>
 		<article>
