escuelas centro mejoras

--- a/pages/escuelas-centro.html
+++ b/pages/escuelas-centro.html
@@ -80,36 +80,37 @@
 			<p>Dirección: Simón Bolivar 896 Barrio Güemes</p>
 		</h4>
 		<a href="https://goo.gl/maps/GzZh55zT5sFjvRym9" target="_blank">Ver en GOOGLE MAPS</a>
+		<br><br>
 	</section>
 	<section>
-		<article>
-			<h3>Escuela Estados Unidos</h3>
-			<div class="escuela13">
-				<div class="fotoEscuela13">
-					<img src="../assets/img/Escuela-Prov_EEUU.png" alt="img escuela-Estados Unidos">
-				</div>
-				<div class="textoFotoEscuela13">
-					<p> Codigo de Inspección: 1141-13 Telefono: 0351 4337992
-						Directora: Perez, Karina Lourdes Año de Fundación: 1929
-					</p>
-					<p> Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est.
-						Temporibus dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium?
-						Reiciendis, odio adipisci quasi quia perferendis minus non consequatur magni possimus eum autem
-						expedita incidunt illum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
-					</p>
-
-				</div>
+		<div class="row">
+			<h3 class="text-center border border-info-subtle">
+				Escuela Estados Unidos
+			</h3>
+			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<img class="d-block w-100 escuela-estadosunidos" src="../assets/img/Escuela-Prov_EEUU.png"
+					alt="img escuela-estadosunidos">
+			</figure>
+			<div class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<p class="textoFotoEscuela13">
+					Codigo de Inspección: 1141-13 Telefono: 0351 4337992
+					Directora: Perez, Karina Lourdes Año de Fundación: 1929
+				</p>
+				<p>
+					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est.
+					Temporibus dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium?
+					Reiciendis, odio adipisci quasi quia perferendis minus non consequatur magni possimus eum autem
+					expedita incidunt illum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
+				</p>
 			</div>
-			<h3>Ubicación</h3>
-			<h4>
-				<p>Dirección: La Pampa 550 Barrio Güemes</p>
-			</h4>
-			<a href="https://goo.gl/maps/2HxeNUQhpTdnSbxG8" target="_blank">Ver en GOOGLE MAPS</a>
-		</article>
+		</div>
+		<h3>Ubicación</h3>
+		<h4>
+			<p>Dirección: La Pampa 550 Barrio Güemes</p>
+		</h4>
+		<a href="https://goo.gl/maps/2HxeNUQhpTdnSbxG8" target="_blank">Ver en GOOGLE MAPS</a>
+		<br><br>
 	</section>
-	<h3 class="divisor"></h3>
-
-
 	<!-- inicio de footer -->
 	<footer>
 		<img class="img-logofooter" src="../assets/img/1141.png" alt="img zona 1141">
