mejoras escuelas centros-carousel

--- a/pages/escuelas-centro.html
+++ b/pages/escuelas-centro.html
@@ -59,7 +59,7 @@
 				Escuela Adolfo Saldias
 			</h3>
 			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
-				<img class="d-block w-100 escuela-saldias" src="../assets/img/escuela-saldias.jpg"
+				<img class="d-block w-100 escuela" src="../assets/img/escuela-saldias.jpg"
 					alt="img escuela-saldias">
 			</figure>
 			<div class="col-xl-6 col-md-6 col-sm-12 text-center">
@@ -88,7 +88,7 @@
 				Escuela Estados Unidos
 			</h3>
 			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
-				<img class="d-block w-100 escuela-estadosunidos" src="../assets/img/Escuela-Prov_EEUU.png"
+				<img class="d-block w-100 escuela" src="../assets/img/Escuela-Prov_EEUU.png"
 					alt="img escuela-estadosunidos">
 			</figure>
 			<div class="col-xl-6 col-md-6 col-sm-12 text-center">
@@ -109,6 +109,64 @@
 			<p>Dirección: La Pampa 550 Barrio Güemes</p>
 		</h4>
 		<a href="https://goo.gl/maps/2HxeNUQhpTdnSbxG8" target="_blank">Ver en GOOGLE MAPS</a>
+		<br><br>
+	</section>
+	<section>
+		<div class="row">
+			<h3 class="text-center border border-info-subtle">
+				Escuela Hugo Wast
+			</h3>
+			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<img class="d-block w-100 escuela" src="../assets/img/Escuela-Hugo wast.png"
+					alt="img escuela-hugo wast">
+			</figure>
+			<div class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<p class="textoFotoEscuela11">
+					Codigo de Inspección: 1141-14 Telefono: 0351 
+					Directora: Acuña, Cristina Año de Fundación: 19
+				</p>
+				<p>
+					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est. Temporibus
+					dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium? Reiciendis, odio
+					adipisci quasi quia perferendis minus non consequatur magni possimus eum autem expedita
+					inciduntillum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
+				</p>
+			</div>
+		</div>
+		<h3>Ubicación</h3>
+		<h4>
+			<p>Dirección: Santiago Caceres 2099 Barrio Güemes</p>
+		</h4>
+		<a href="https://goo.gl/maps/wYNLGEyzrkxU4sQc6" target="_blank">Ver en GOOGLE MAPS</a>
+		<br><br>
+	</section>
+	<section>
+		<div class="row">
+			<h3 class="text-center border border-info-subtle">
+				Escuela Vaz Ferreyra
+			</h3>
+			<figure class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<img class="d-block w-100 escuela" src="../assets/img/escuela-vaz.png"
+					alt="img escuela-vazferreyra">
+			</figure>
+			<div class="col-xl-6 col-md-6 col-sm-12 text-center">
+				<p class="textoFotoEscuela13">
+					Codigo de Inspección: 1141-15 Telefono: 0351 
+					Directora: Viviana Gauchat  Año de Fundación: 19
+				</p>
+				<p>
+					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est.
+					Temporibus dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium?
+					Reiciendis, odio adipisci quasi quia perferendis minus non consequatur magni possimus eum autem
+					expedita incidunt illum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
+				</p>
+			</div>
+		</div>
+		<h3>Ubicación</h3>
+		<h4>
+			<p>Dirección: La Pampa 550 Barrio Güemes</p>
+		</h4>
+		<a href="https://goo.gl/maps/hGoLxkpnfLim9oAC6" target="_blank">Ver en GOOGLE MAPS</a>
 		<br><br>
 	</section>
 	<!-- inicio de footer -->
