--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -59,14 +59,17 @@
 	<!-- CAROUSEL BOOOTSTRAP -->
 	<div id="carouselExample" class="carousel slide">
 		<div class="carousel-inner">
-			<div class="carousel-item active">
+			<div class=" text-center carousel-item active">
+				<figure>
 				<img src="../assets/img/escuela.png" class="d-block w-100 imgCarousel" alt="...">
+				<figcaption>Escuela Sede de Inspección</figcaption>
+				</figure>
 			</div>
-			<div class="carousel-item">
+			<div class="text-center carousel-item">
+				<figure>
 				<img src="../assets/img/escuela1.webp" class="d-block w-100 imgCarousel" alt="...">
-			</div>
-			<div class="carousel-item">
-				<img src="../assets/img/delia provinciale1.jpg" class="d-block w-100 imgCarousel" alt="...">
+				<figcaption>Patio de Ingreso a la Escuela</figcaption>
+				</figure>
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
