--- a/index.html
+++ b/index.html
@@ -54,38 +54,37 @@
 		</nav>
 	</header>
 
-	<section class="index1">
-		<div id="carouselExample" class="carousel slide">
-			<div class="carousel-inner">
-				<div class="text-center carousel-item active">
-					<figure>
+	<div id="carouselExample" class="carousel slide">
+		<div class="carousel-inner">
+			<div class="text-center carousel-item active">
+				<figure>
 					<img src="assets/img/escuela.png" class="d-block w-100 imgCarousel" alt="...">
 					<figcaption>Escuela Sede de Inspección</figcaption>
-					</figure>
-				</div>
-				<div class="text-center carousel-item">
-					<figure>
+				</figure>
+			</div>
+			<div class="text-center carousel-item">
+				<figure>
 					<img src="assets/img/escuela1.webp" class="d-block w-100 imgCarousel" alt="...">
 					<figcaption>Patio de Ingreso a la Escuela</figcaption>
-					</figure>
-				</div>
-				<div class="text-center carousel-item">
-					<figure>
+				</figure>
+			</div>
+			<div class="text-center carousel-item">
+				<figure>
 					<img src="assets/img/delia provinciale1.jpg" class="d-block w-100 imgCarousel" alt="...">
 					<figcaption>Discurso de la Secretaria de Educacion</figcaption>
-					</figure>
-				</div>
+				</figure>
 			</div>
-			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Previous</span>
-			</button>
-			<button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Next</span>
-			</button>
 		</div>
-	</section>
+		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="visually-hidden">Previous</span>
+		</button>
+		<button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="visually-hidden">Next</span>
+		</button>
+	</div>
+
 	<section class="index2">
 		<div class="row">
 			<h3 class="text-center border border-info-subtle">
@@ -110,12 +109,7 @@
 			</figure>
 
 			<figure class="col-xl-2 col-md-4 col-sm-6 text-center">
-				<img src="assets/img/img.png" alt="img Secretaria"> 
-				<figcaption>Secretaria Administrativa</figcaption>
-			</figure>
-
-			<figure class="col-xl-2 col-md-4 col-sm-6 text-center">
-				<img src="assets/img/img.png" alt="img Secretaria"> 
+				<img src="assets/img/img.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 
@@ -125,7 +119,12 @@
 			</figure>
 
 			<figure class="col-xl-2 col-md-4 col-sm-6 text-center">
-				<img src="assets/img/img.png" alt="img Secretaria"> 
+				<img src="assets/img/img.png" alt="img Secretaria">
+				<figcaption>Secretaria Administrativa</figcaption>
+			</figure>
+
+			<figure class="col-xl-2 col-md-4 col-sm-6 text-center">
+				<img src="assets/img/img.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 
@@ -210,8 +209,10 @@
 				<p class="col-md-4 mb-0 text-muted">&copy; 2023 Company, Inc. All rights reserved</p>
 				<ul class="nav col-md-4 justify-content-end">
 					<li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
-					<li class="nav-item"><a href="pages/ubicacion.html" class="nav-link px-2 text-muted">Ubicacion</a></li>
-					<li class="nav-item"><a href="pages/contacto.html" class="nav-link px-2 text-muted">Contacto</a></li>
+					<li class="nav-item"><a href="pages/ubicacion.html" class="nav-link px-2 text-muted">Ubicacion</a>
+					</li>
+					<li class="nav-item"><a href="pages/contacto.html" class="nav-link px-2 text-muted">Contacto</a>
+					</li>
 				</ul>
 			</footer>
 		</div>
