--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -61,14 +61,14 @@
 		<div class="carousel-inner">
 			<div class=" text-center carousel-item active">
 				<figure>
-				<img src="../assets/img/escuela.png" class="d-block w-100 imgCarousel" alt="...">
-				<figcaption>Escuela Sede de Inspección</figcaption>
+					<img src="../assets/img/escuela.png" class="d-block w-100 imgCarousel" alt="...">
+					<figcaption>Escuela Sede de Inspección</figcaption>
 				</figure>
 			</div>
 			<div class="text-center carousel-item">
 				<figure>
-				<img src="../assets/img/escuela1.webp" class="d-block w-100 imgCarousel" alt="...">
-				<figcaption>Patio de Ingreso a la Escuela</figcaption>
+					<img src="../assets/img/escuela1.webp" class="d-block w-100 imgCarousel" alt="...">
+					<figcaption>Patio de Ingreso a la Escuela</figcaption>
 				</figure>
 			</div>
 		</div>
@@ -89,8 +89,7 @@
 				Ubicación Escuela Sede de Inspeccion
 			</h3>
 			<figure class="col-xl-6 col-md-12 col-sm-12">
-				<img class="d-block w-100 img-ubic" 
-					src="../assets/img/escuela.jpg" alt="escuelasede">
+				<img class="d-block w-100 img-ubic" src="../assets/img/escuela.jpg" alt="escuelasede">
 			</figure>
 			<figure class="col-xl-6 col-md-12 col-sm-12">
 				<iframe class="d-block w-100 mapa-ubic"
