correciones mas scss

--- a/index.html
+++ b/index.html
@@ -103,32 +103,32 @@
 			<h3 class="text-center border border-info-subtle">
 				Personal Administativo Zona 1141
 			</h3>
-			<figure class="col-xl-2 col-md-4 col-sm-6 text-center">
+			<figure class="col-xl-2 col-md-4 col-sm-6 col-xs-6 text-center">
 				<img src="assets/img/Secretario 1141.jpg" alt="img secretario 1141">
 				<figcaption>Secretario Técnico</figcaption>
 			</figure>
 
-			<figure class="col-xl-2 col-md-4 col-sm-6 text-center">
+			<figure class="col-xl-2 col-md-4 col-sm-6  text-center">
 				<img src="assets/img/img.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 
-			<figure class="col-xl-2 col-md-4 col-sm-6 text-center">
+			<figure class="col-xl-2 col-md-4 col-sm-6  text-center">
 				<img src="assets/img/img.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 
-			<figure class="col-xl-2 col-md-4 col-sm-6 text-center">
+			<figure class="col-xl-2 col-md-4 col-sm-6  text-center">
 				<img src="assets/img/img.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 
-			<figure class="col-xl-2 col-md-4 col-sm-6 text-center">
+			<figure class="col-xl-2 col-md-4 col-sm-6  text-center">
 				<img src="assets/img/img.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
 
-			<figure class="col-xl-2 col-md-4 col-sm-6 text-center">
+			<figure class="col-xl-2 col-md-4 col-sm-6  text-center">
 				<img src="assets/img/img.png" alt="img Secretaria">
 				<figcaption>Secretaria Administrativa</figcaption>
 			</figure>
