Condicional-mixin-parrafos

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<!-- MI CSS -->
 	<link rel="stylesheet" href="CSS/estilo.css">
 </head>
+
 <body class="container-fluid">
 	<!-- fila de logo + nav -->
 	<header>
@@ -134,52 +135,60 @@
 			</figure>
 		</div>
 	</section>
-	<section>
-		<div class="cajaEscuelasCentro">
-			<h3>Escuelas Zona Centro</h3>
-			<div class="caja itemUno2">
+	<section class="index4">
+		<div>
+			<h3 class="text-center border border-info-subtle">
+				Escuelas
+			</h3>
+		</div>
+	</section>
+	<section class="index5">
+		<div class="parrafoConParametros">
+			<h3>Zona Centro</h3>
+			<div>
 				<p>1141-11 Adolfo Saldias</p>
 			</div>
-			<div class="caja itemDos2">
+			<div>
 				<p>1141-13 Estados Unidos</p>
 			</div>
-			<div class="caja itemTres2">
+			<div>
 				<p>1141-14 Hugo Wast</p>
 			</div>
-			<div class="caja itemCuatro2">
+			<div>
 				<p>1141-15 Vaz Ferreira</p>
 			</div>
 		</div>
-		<div class="cajaEscuelasSur">
-			<h3>Escuelas Zona Sur</h3>
-			<div class="caja itemUno3">
+		<div>
+			<h3>Zona Sur</h3>
+			<div>
 				<p>1141-21 Manuel Belgrano</p>
 			</div>
-			<div class="caja itemDos3">
+			<div>
 				<p>1141-22 Benito Soria</p>
 			</div>
-			<div class="caja itemTres3">
+			<div>
 				<p>1141-24 Provincia de Catamarca</p>
 			</div>
-			<div class="caja itemCuatro3">
+			<div>
 				<p>1141-25 Republica de Siria</p>
 			</div>
 		</div>
-		<div class="cajaEscuelasOeste">
-			<h3>Escuelas Zona Oeste</h3>
-			<div class="caja itemUno4">
+		<div>
+			<h3>Zona Oeste</h3>
+			<div>
 				<p>1141-31 Gobernador Olmos</p>
 			</div>
-			<div class="caja itemDos4">
+			<div>
 				<p>1141-33 Aeronautica Argentina</p>
 			</div>
-			<div class="caja itemTres4">
+			<div>
 				<p>1141-36 Republica Argentina</p>
 			</div>
-			<div class="caja itemCuatro4">
+			<div>
 				<p>1141-37 Zavala Ortiz</p>
 			</div>
 		</div>
+
 	</section>
 
 	<!-- inicio de footer -->
